REGRESSION(r147894): Broke WTFReportBacktrace() on Mac. <http://webkit.org/b/114174>

Reviewed by Anders Carlsson.

An #elif !OS(ANDROID) block was erroneously removed, turn it into an #else instead since
that path will still be taken for OS(DARWIN).

* wtf/Assertions.cpp:


Canonical link: https://commits.webkit.org/132556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147929 268f45cc-cd09-0410-ab3c-d52691b4dbfc